# nam-website

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SWEEP-FINDINGS.md  TODO.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
audiobooks/: .gitignore
backlog/: 001-oauth-nonce.md  002-auth-httponly-cookie.md  003-csp-hash.md  004-systemd-node-version.md  005-redis-rate-limits.md  006-eslint-warnings.md  007-auto-review-bot.md  008-hover-css-refactor.md  009-accent-color-single-source.md  010-use-tag-corner-css.md  011-rpg-landing-page.md  012-i18n.md  013-content-cv.md  014-first-blog-post.md  015-gallery-content.md  016-til-section.md  017-youtube-playlists.md  018-food-section.md  019-run-tracker.md  020-gym-log.md  021-health-diary.md  022-ai-health-chatbot.md  023-news-crawler.md  024-social-accounts.md  025-portfolio-tracker.md  026-minecraft-section.md  027-project-subdomains.md  028-diy-klaude.md  029-vibe-code-writeup.md  030-ellamind.md  031-design-tokens.md  032-pixel-art-assets.md  033-digital-garden.md  034-reading-list.md  035-bookmarks.md  036-social-features.md  037-admin-dashboard.md  038-uptime-monitoring.md  039-ui-ux-rework.md  041-plays-puzzles.md  (+4 more)
config/: celery.py  settings.py  urls.py
docs/: QA-CHECKLIST.md  README.md  ci-cd.md  development-log.md  domain-setup.md  infrastructure.md  quality-learnings.md  server-setup-klaude.md
fixtures/: seed.example.json
frontend/: .prettierignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  (+1 more)
(+354 files in other folders)
