[project]
name = "nam-website"
version = "0.1.0"
description = "Personal website"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "django-cors-headers>=4.6",
    "django-environ>=0.11",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "pillow>=12.1.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1",
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-django>=4.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "ARG"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py test_*.py"
